--- a/package.json
+++ b/package.json
@@ -5,18 +5,22 @@
   "main": "server.js",
   "scripts": {
     "start": "node server",
-    "server": "nodemon server"
+    "server": "nodemon server",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "Jaskiratpal Singh",
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "bulma-extensions": "^6.2.7",
     "config": "^3.1.0",
     "express": "^4.16.4",
     "express-validator": "^5.3.1",
     "gravatar": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.8",
+    "node-sass": "^4.12.0",
     "request": "^2.88.0",
     "uuid": "^3.3.2"
   },
