--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.8",
     "node-sass": "^4.12.0",
+    "react-phone-number-input": "^2.3.13",
     "react-quill": "^1.3.3",
     "request": "^2.88.0",
     "uuid": "^3.3.2"
